# greenchclaw-cpu

./: .gitignore  LICENSE  README.md  config.yaml  install.sh  pyproject.toml  requirements.txt
souls/default/: IDENTITY.md  MEMORY.md  SOUL.md  USER.md
src/: __init__.py  config.py  main.py
src/agent/: __init__.py  agent.py  orchestrator.py
src/cli/: __init__.py  main.py  onboard.py
src/knowledge/: __init__.py
src/memory/: __init__.py  consolidation.py  memory.py
src/soul/: __init__.py  soul_files.py  soul_manager.py
src/tools/: agent_tools.py  base.py  code_tools.py  document_tools.py  file_tools.py  web_tools.py
src/web/: __init__.py  server.py
src/web/static/: app.js  index.html  style.css
tests/: __init__.py  conftest.py  test_config.py  test_ollama_connection.py  test_soul_loading.py
